[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "safechain"
version = "0.1.0"
description = "LangChain'in sıfır bağımlılıklı, saf Python implementasyonu"
requires-python = ">=3.10"
dependencies = []   # Sıfır dış bağımlılık — sadece Python stdlib

[tool.setuptools.packages.find]
where = ["."]
include = ["safechain*"]
